data/all_generated_tests/raw_wast_tests/br_InfiniteLoops_477.wast
;; 8. **Test Description**: Create a loop containing a series of nested blocks wherein a `br` instruction should exit a specific block, not the loop. Make sure the loop has a `br_if` to evaluate a condition that exits the loop entirely.    **Constraint**: Ensures correct unwinding of the operand stack and context labeling.    **Relation to Infinite Loops**: Incorrect block unwinding might prevent loop exit, causing infinite loops.

(assert_invalid
  (module
    (func (result i32)
      (block (result i32)
        (loop (result i32)
          (block (result i32)
            (block (result i32)
              (br 2 (i32.const 42))
              (i32.const 0)
            )
            (i32.const 1)
          )
          (br_if 1 (i32.const 0))
        )
      )
    )
  )
  "type mismatch"
)